--- a/style.css
+++ b/style.css
@@ -3,9 +3,21 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
-
+.celebration {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(
+    -50%,
+    -50%
+  ); /* This is a shorthand of
+                                         translateX(-50%) and translateY(-50%) */
+}
 body {
   background-color: rgb(248, 248, 255);
+  overflow-y: hidden;
 }
 .game-container {
   height: 90vh;
@@ -26,11 +38,12 @@ body {
 .keys-section {
   width: 510px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .keys-section button {
-  width: 43px;
-  height: 58px;
+  width: 38px;
+  height: 53px;
   border: none;
   margin: 4px;
   border-radius: 4px;
@@ -44,10 +57,11 @@ body {
 }
 .tile-section div {
   display: flex;
+  justify-content: center;
 }
 .tile-section .tile {
-  width: 62px;
-  height: 62px;
+  width: 55px;
+  height: 55px;
   border: 2px solid rgb(225, 225, 226);
   box-sizing: border-box;
   display: flex;
@@ -71,7 +85,7 @@ body {
   font-weight: 600;
 }
 .change-to-yellow {
-  background-color: #c9b458 !important;
+  background-color: #aa9019 !important;
   border: none !important;
   color: white;
   font-weight: 600;
@@ -83,17 +97,127 @@ body {
   font-weight: 600;
 }
 .tile.flip {
-    animation: 0.3s linear flipping;
+  animation: 0.3s linear flipping;
 }
 
-@keyframes flipping{
-    0% {
-        transform: rotateX(0deg);
-    }
-    50%{
-        transform: rotateX(90deg);
-    }
-    100%{
-        transform: rotateX(0deg);
-    }
+@keyframes flipping {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(90deg);
+  }
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  min-width: 400px !important;
+  padding: 20px 30px 50px;
+  min-height: 200px !important;
+  border-radius: 15px;
+}
+.closeIcon {
+  display: flex;
+  justify-content: right;
+}
+.close {
+  display: inline-block;
+  justify-content: right;
+  font-size: 36px;
+  font-weight: bold;
+  transition: transform 0.5s ease;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  /* text-decoration: none; */
+  cursor: pointer;
+  transform: rotate(30deg);
+  transition: transform 0.5s ease;
+}
+.buttonDiv {
+  display: flex;
+  justify-content: center;
+}
+.buttonDiv button {
+  color: white;
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: #6aaa64;
+  border: none;
+  transition: 0.3s ease;
+  transition: transform 0.1s ease;
+}
+.modalMessage {
+  display: flex;
+  justify-content: center;
+}
+.buttonDiv button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+  background-color: #578f52;
+  transition: 0.3s ease;
+  transition: transform 0.1s ease;
+}
+
+.chipId {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  /* bottom: 10px; */
+  left: 50%;
+  right: 50%;
+  width: 300px;
+  height: 30px;
+   transform: translate(
+    -50%,
+    -50%
+  );
+}
+.redChip,
+.yellowChip,
+.greenChip {
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 30px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  transition: 0.5s ease;
+}
+.redChip {
+  background-color: #d32f2f;
+}
+.yellowChip {
+  background-color: #edd502;
+}
+.greenChip {
+  background-color: #2e7d32;
 }
