--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 .celebration {
   position: absolute;
@@ -16,58 +18,78 @@
                                          translateX(-50%) and translateY(-50%) */
 }
 body {
-  background-color: rgb(248, 248, 255);
-  overflow-y: hidden;
+  /* background-color: rgb(248, 248, 255); */
+  overflow: hidden;
 }
 .game-container {
   height: 90vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 .title {
   text-align: center;
-  width: 510px;
+  width: 100%;
   border-bottom: solid 1px rgb(199, 194, 214);
+  margin-bottom: 10px;
+  padding: 10px;
 }
+
 .tile-section {
-  width: 330px;
-  margin-bottom: 30px;
+  width: 50vw;
+  margin-bottom: 10px;
 }
 .keys-section {
-  width: 510px;
+  width: 35.9vw;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 .keys-section button {
-  width: 38px;
-  height: 53px;
+  width: 2.8vmax;
+  height: 3.9vmax;
   border: none;
   margin: 4px;
   border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
+  font-size: 16px;
+  transition: 0.2s ease;
 }
+
+.keys-section button:hover{
+  background-color: rgb(167, 167, 167);
+  transition: 0.2s ease;
+}
+
 .keys-section button:nth-child(11) {
-  margin-left: 30px;
+  margin-left: 0vw;
 }
-.keys-section button:nth-child(20),
+.keys-section button:nth-child(20) {
+  width: 100px;
+}
 .keys-section button:nth-child(28) {
-  width: 68px;
+  width: 60px;
 }
+
 .tile-section div {
   display: flex;
   justify-content: center;
 }
 .tile-section .tile {
-  width: 55px;
-  height: 55px;
-  border: 2px solid rgb(225, 225, 226);
+  width: 4vw;
+  height: 4vw;
+  border: 2px solid #d8dbdf;
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  margin: 2px;
+  margin: 2.5px;
   justify-content: center;
+  font-size: 32px;
+  font-weight: 900;
 }
 .message-section {
   height: 30px;
@@ -78,6 +100,13 @@ body {
   margin: 0;
   padding: 10px;
 }
+
+.active-Tile {
+  border: 2px solid rgb(31, 31, 31) !important;
+  transform: scale(1.2);
+  transition: 0.1s ease-in;
+}
+
 .change-to-grey {
   background-color: #787c7e !important;
   border: none !important;
@@ -191,10 +220,8 @@ body {
   right: 50%;
   width: 300px;
   height: 30px;
-   transform: translate(
-    -50%,
-    -50%
-  );
+  transform: translate(-50%, -50%);
+  bottom: 50px;
 }
 .redChip,
 .yellowChip,
@@ -220,4 +247,41 @@ body {
 }
 .greenChip {
   background-color: #2e7d32;
+}
+.inactiveScale {
+  transform: scale(1) !important;
+  transition: 0.1s ease-out !important;
+}
+
+.loader {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 1706px) {
+  .keys-section {
+    width: 32vw;
+  }
+}
+
+@media (max-width: 1426px) {
+  .keys-section {
+    width: 500px;
+  }
+  .keys-section button:nth-child(11) {
+    margin-left: 50px;
+  }
+  .keys-section button:nth-child(19) {
+    margin-right: 50px;
+  }
 }
